<resources>
    <string name="app_name">PrviDomaci</string>
    <string name="title_ime">Ime:</string>
    <string name="title_prezime">Prezime:</string>
    <string name="title_bolnica">Bolnica:</string>
    <string name="title_stanje">Stanje</string>
    <string name="title_unos">Unos</string>
    <string name="title_liste">Liste</string>
    <string name="title_profil">Profil</string>
    <string name="user_enter_name">Unesite ime</string>
    <string name="user_enter_lastname">Unesite prezime</string>
    <string name="user_enter_hospital">Unesite ime bolnice u kojoj ste zaposleni</string>
    <string name="user_enter_symptoms">Unesite simptome i opste stanje pacijenta</string>
    <string name="user_enter_pin">Unesite pin</string>
    <string name="action_prijava">Prijava</string>
    <string name="info_login">Informacioni sistem za pracenje stanja pacijenata obolelih od Covid-19</string>
    <string name="action_zdrav">Zdrav</string>
    <string name="action_hospitalizacija">Hospitalizacija</string>
    <string name="pregled_brojnog_stanja">Pregled brojnog stanja pacijenata</string>
    <string name="broj_cekaonica">Broj pacijenata u cekaonici</string>
    <string name="broj_hospitalizovanih">Broj hospitalizovanih pacijenata</string>
    <string name="broj_otpustenih">Broj otpustenih pacijenata</string>
    <string name="unos_novog_pacijenta">Unos novog pacijenta</string>
    <string name="dodaj_u_cekaonicu">Dodaj u cekaonicu</string>
    <string name="podaci_o_radniku">Podaci o zdravstvenom radniku</string>
    <string name="izmeni">Izmeni</string>
    <string name="odjava">Odjava</string>
    <string name="odustani">Odustani</string>
    <string name="karton_pacijenta">Karton pacijenta</string>
    <string name="stanje_pri_prijemu">Stanje pri prijemu</string>
    <string name="trenutno_stanje">Trenutno stanje</string>
    <string name="datum_prijema">Datum prijema</string>
    <string name="pretrazi">🔎 Pretrazi po imenu ili prezimenu</string>
    <string name="karton">Karton</string>
    <string name="otpust">Otpust</string>
    <string name="otpusten">Otpusten:</string>
    <string name="unknown">Unknown</string>
</resources>
