<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.activities.LoginActivity">

    <EditText
        android:id="@+id/et_pin"
        android:layout_width="130dp"
        android:layout_height="40dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="26dp"
        android:background="@drawable/edit_text_border"

        android:gravity="center"
        android:layout_marginEnd="24dp"
        android:hint="@string/user_enter_pin"
        android:imeOptions="actionDone"
        android:inputType="numberPassword"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_user_hospital" />

    <EditText
        android:id="@+id/et_user_hospital"
        android:paddingStart="10dp"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="26dp"
        android:background="@drawable/edit_text_border"

        android:layout_marginTop="26dp"
        android:layout_marginEnd="26dp"
        android:hint="@string/user_enter_hospital"
        android:inputType="textEmailAddress"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_user_lastname" />

    <EditText

        android:id="@+id/et_user_lastname"
        android:paddingStart="10dp"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="26dp"
        android:background="@drawable/edit_text_border"

        android:layout_marginTop="26dp"
        android:layout_marginEnd="26dp"
        android:hint="@string/user_enter_lastname"
        android:inputType="textPersonName"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_user_name" />

    <EditText
        android:id="@+id/et_user_name"
        android:paddingStart="10dp"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="26dp"
        android:layout_marginTop="56dp"
        android:background="@drawable/edit_text_border"

        android:layout_marginEnd="26dp"
        android:hint="@string/user_enter_name"
        android:inputType="textPersonName"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/button_login_prijava"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_gravity="start"
        android:layout_marginStart="48dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="48dp"
        android:background="#424242"
        android:enabled="true"
        android:text="@string/action_prijava"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_pin" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/splash_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:text="@string/info_login"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />
</androidx.constraintlayout.widget.ConstraintLayout>