<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textViewUnos"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/unos_novog_pacijenta"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/imageView_unos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView_unos"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="24dp"
        android:src="@drawable/ic_person_add_green_24dp"
        app:layout_constraintBottom_toTopOf="@+id/et_user_name_unos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewUnos" />

    <EditText
        android:id="@+id/et_user_name_unos"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="26dp"
        android:layout_marginTop="46dp"
        android:layout_marginEnd="26dp"

        android:background="@drawable/edit_text_border"
        android:hint="@string/user_enter_name"
        android:inputType="textPersonName"
        android:paddingStart="10dp"
        android:selectAllOnFocus="true"
        app:layout_constraintBottom_toTopOf="@+id/et_user_lastname_unos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView_unos" />

    <EditText
        android:id="@+id/et_user_lastname_unos"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="26dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="26dp"

        android:background="@drawable/edit_text_border"
        android:hint="@string/user_enter_lastname"
        android:inputType="textPersonName"
        android:paddingStart="10dp"
        android:selectAllOnFocus="true"
        app:layout_constraintBottom_toTopOf="@+id/et_user_hospital_unos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_user_name_unos" />

    <EditText
        android:id="@+id/et_user_hospital_unos"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="26dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="26dp"

        android:background="@drawable/edit_text_border"
        android:hint="@string/user_enter_symptoms"
        android:inputType="textEmailAddress"
        android:paddingStart="10dp"
        android:selectAllOnFocus="true"
        android:lines="4"
        android:maxLines="6"
        app:layout_constraintBottom_toTopOf="@+id/button_dodaj_u_ceokaonicu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_user_lastname_unos" />

    <Button
        android:id="@+id/button_dodaj_u_ceokaonicu"
        android:layout_width="160dp"
        android:layout_height="50dp"
        android:layout_gravity="start"
        android:layout_marginStart="48dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="48dp"
        android:background="#424242"
        android:text="@string/dodaj_u_cekaonicu"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_user_hospital_unos" />

</androidx.constraintlayout.widget.ConstraintLayout>