<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/et_user_hospital_change4"
        android:layout_width="0dp"
        android:layout_height="40dp"

        android:layout_marginTop="40dp"
        android:background="@drawable/edit_text_border"
        android:inputType="textPersonName"
        android:paddingStart="10dp"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="@+id/et_user_hospital_change3"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/et_user_hospital_change3"
        app:layout_constraintTop_toBottomOf="@+id/et_user_hospital_change3" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="23dp"
        android:layout_marginTop="16dp"
        android:text="@string/karton"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView_profil4"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="12dp"
        android:src="@drawable/ic_medication_24dp"
        android:tint="@color/njegova_zelena"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <EditText
        android:id="@+id/et_patient_name_change"
        android:layout_width="300dp"
        android:layout_height="40dp"

        android:layout_marginTop="24dp"
        android:background="@drawable/edit_text_border"
        android:inputType="textPersonName"
        android:paddingStart="10dp"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView_profil4" />


    <EditText
        android:id="@+id/et_patient_lastname_change"
        android:layout_width="0dp"
        android:layout_height="40dp"

        android:layout_marginTop="24dp"
        android:background="@drawable/edit_text_border"
        android:inputType="textEmailAddress"
        android:lines="4"
        android:maxLines="6"
        android:paddingStart="10dp"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="@+id/et_patient_name_change"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/et_patient_name_change"
        app:layout_constraintTop_toBottomOf="@+id/et_patient_name_change" />

    <EditText
        android:id="@+id/et_user_hospital_change3"
        android:layout_width="0dp"
        android:layout_height="40dp"

        android:layout_marginTop="40dp"
        android:background="@drawable/edit_text_border"
        android:inputType="textPersonName"
        android:paddingStart="10dp"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="@+id/et_patient_lastname_change"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/et_patient_lastname_change"
        app:layout_constraintTop_toBottomOf="@+id/et_patient_lastname_change" />

    <Button
        android:id="@+id/buttonPacijentOdustani"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="76dp"
        android:background="#424242"
        android:text="@string/odustani"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/et_user_hospital_change4"
        app:layout_constraintTop_toBottomOf="@+id/et_user_hospital_change4" />

    <Button
        android:id="@+id/buttonPacijentIzmeni"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:layout_marginEnd="20dp"
        android:background="#424242"
        android:text="@string/izmeni"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/et_user_hospital_change4"
        app:layout_constraintTop_toBottomOf="@+id/et_user_hospital_change4" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stanje_pri_prijemu"
        app:layout_constraintBottom_toTopOf="@+id/et_user_hospital_change3"
        app:layout_constraintStart_toStartOf="@+id/et_patient_lastname_change"
        app:layout_constraintTop_toBottomOf="@+id/et_patient_lastname_change"
        app:layout_constraintVertical_bias="0.619" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/trenutno_stanje"
        app:layout_constraintBottom_toTopOf="@+id/et_user_hospital_change4"
        app:layout_constraintStart_toStartOf="@+id/et_user_hospital_change3"
        app:layout_constraintTop_toBottomOf="@+id/et_user_hospital_change3"
        app:layout_constraintVertical_bias="0.619" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/datum_prijema"
        app:layout_constraintBottom_toTopOf="@+id/buttonPacijentOdustani"
        app:layout_constraintStart_toStartOf="@+id/et_user_hospital_change4"
        app:layout_constraintTop_toBottomOf="@+id/et_user_hospital_change4"
        app:layout_constraintVertical_bias="0.17" />

    <TextView
        android:id="@+id/textViewDatumPrijema"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        app:layout_constraintBottom_toTopOf="@+id/buttonPacijentOdustani"
        app:layout_constraintStart_toStartOf="@+id/et_user_hospital_change4"
        app:layout_constraintTop_toBottomOf="@+id/textView11"
        app:layout_constraintVertical_bias="0.392" />


</androidx.constraintlayout.widget.ConstraintLayout>